# Paralles

./: README.md
task1/: CMakeLists.txt  Makefile  Task1.cpp  Task1.h  readme
task2/: Table.xlsx  integ.c  lin.cpp
